--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "focus-trap-react": "^10.2.3",
     "framer-motion": "^11.2.10",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-microsoft-clarity": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
@@ -23,6 +24,7 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "vite-plugin-eslint": "^1.8.1"
   }
 }
