--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "vite": "^5.2.0",
+    "vite-jsconfig-paths": "^2.0.1",
     "vite-plugin-eslint": "^1.8.1"
   }
 }
