Update project to v9 [ESLint rules; absolute imports; self-hosted fonts; fix image component; fix errors and warnings reported by new ESLint rules]

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,9 @@
 {
   "compilerOptions": {
     "paths": {
-      "@*": ["./src/*"]
+      "@*": ["./src/*"],
+      "@icons": ["./src/assets/icons"],
+      "@images/*": ["./src/assets/images/*"]
     }
   }
 }
