--- a/package.json
+++ b/package.json
@@ -13,13 +13,11 @@
     "focus-trap-react": "^10.2.3",
     "framer-motion": "^11.2.10",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-microsoft-clarity": "^1.2.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
-    "@vitejs/plugin-legacy": "^5.4.1",
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.57.0",
     "eslint-plugin-import": "^2.29.1",
